project cleanup and style pass

--- a/package.json
+++ b/package.json
@@ -1,19 +1,12 @@
 {
   "name": "resprite",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "dev": "wds --node-resolve --watch --open -r src/"
   },
   "devDependencies": {
-    "typescript": "~5.8.3",
-    "vite": "^7.0.4"
-  },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.11",
-    "tailwindcss": "^4.1.11"
+    "@web/dev-server": "~0.4.6"
   }
 }
