--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "wds --node-resolve --watch --open -r src/"
+    "dev": "wds --node-resolve --watch --open"
   },
   "devDependencies": {
     "@web/dev-server": "~0.4.6"
